--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ const title = "Mélanie Casu - portfolio";
       class="w-fit ml-7 title text-center text-firefly-900 z-10"
       data-menu-text="homepage"
     >
-      home<span class="text-geyser-500">page</span>.
+      home<span class="text-firefly-500">page</span>.
     </h1>
     <p class="font-light mt-20 text-firefly-900">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin aliquam
