--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,20 +31,34 @@ html {
 
 body,
 body * {
-  @apply font-content lg:text-xl tracking-[0.5px]
+  @apply font-content font-light lg:text-xl tracking-[1px];
+  line-height: normal !important;
+  word-spacing: 1px;
 }
 
-/* * {
-  line-height: normal !important;
-} */
+@media screen and (max-width: 1023px) {
+  .title,
+  .title span {
+    writing-mode: vertical-rl;
+    text-orientation: mixed;
+    @apply rotate-180 translate-y-1/3;
+  }
+}
 
 .title,
 .title span {
-  position: relative;
-  @apply lg:text-9xl font-primary
+  @apply font-primary;
+  white-space: nowrap;
 }
 
-.title::after {
+@media screen and (min-width: 1024px) {
+  .title,
+  .title span {
+    @apply text-9xl;
+  }
+}
+
+/* .title::after {
   content: attr(data-menu-text);
   position: absolute;
   top: 50%;
@@ -52,8 +66,8 @@ body * {
   width: 100%;
   opacity: 0.3;
   -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: #253a3c;
+  -webkit-text-stroke-color: white;
   color: transparent;
   z-index: 1;
-}
+} */
 </style>
