--- a/src/components/common/Menu.astro
+++ b/src/components/common/Menu.astro
@@ -22,7 +22,7 @@ const links = [
 
 <>
   <div
-    class="modal-menu z-50 pr-2 pt-2 pl-6 pb-24 flex flex-col justify-between items-start lg:flex-col-reverse lg:pb-5 lg:pt-48 lg:pr-5 lg:pl-12 fixed top-0 right-0 bottom-0 w-full h-screen lg:rounded-3xl lg:top-6 lg:right-6 lg:bottom-6 lg:w-1/2 2xl:w-1/3 bg-firefly-500"
+    class="modal-menu z-50 pr-2 pt-2 pl-6 pb-24 flex flex-col justify-between items-start lg:flex-col-reverse lg:pb-5 lg:pt-48 lg:pr-5 lg:pl-12 fixed top-0 right-0 bottom-0 w-full h-dvh lg:rounded-3xl lg:top-6 lg:right-6 lg:bottom-6 lg:w-1/2 2xl:w-1/3 bg-firefly-500"
   >
     <div
       class="close-modal self-end group lg:cursor-pointer w-24 h-11 flex justify-center items-center rounded-full bg-fantasy-50 lg:h-[75px] lg:w-[75px] lg:hover:bg-firefly-900 lg:transition-colors"
