Finalisation version desktop pour le listing des projets

--- a/src/components/projects/Listing.astro
+++ b/src/components/projects/Listing.astro
@@ -5,30 +5,35 @@ import Button from "../common/Button.astro";
 ---
 
 <section
-  class="projects-listing bg-firefly-500 flex flex-col items-center py-14 space-y-14 px-8"
+  class="projects-listing bg-firefly-500 flex flex-col items-center py-14 space-y-14 px-8 xl:space-y-28 xl:px-14 2xl:px-36"
 >
   {
     data.map((projet) => (
-      <div class="project text-fantasy-50">
-        <div class="relative w-[300px] h-[365px] mx-auto xs:h-[430px] xs:w-[340px] sm:h-[470px] sm:w-96 md:w-[600px]">
-          <img
-            class="h-80 relative z-20 w-[85%] object-cover object-center xs:h-96 sm:h-[420px]"
-            src={projet.image.src}
-            alt={projet.image.alt}
-          />
-          <div class="absolute bottom-0 p-3 h-80 w-[85%] flex justify-end items-end right-0 z-10 bg-transparent border-[1px] border-firefly-900 xs:h-96 sm:h-[420px]">
-            <h2 class="uppercase text-lg font-medium">{projet.name}</h2>
+      <div class="group project text-fantasy-50 xl:h-screen">
+        <div class="xl:flex xl:flex-row-reverse xl:group-even:flex-row xl:gap-20 xl:h-full xl:items-center">
+          <div class="relative w-[300px] h-[365px] mx-auto xs:h-[430px] xs:w-[340px] sm:h-[470px] sm:w-96 md:w-[600px] xl:group-odd:flex xl:group-odd:justify-end xl:w-1/2 xl:h-[650px]">
+            <img
+              class="h-80 relative z-20 w-[85%] object-cover object-center xs:h-96 sm:h-[420px] xl:h-[580px]"
+              src={projet.image.src}
+              alt={projet.image.alt}
+            />
+            <div class="absolute bottom-0 p-3 h-80 w-[85%] flex justify-end items-end right-0 z-10 bg-transparent border-[1px] border-firefly-900 xs:h-96 sm:h-[420px] xl:group-odd:left-0 xl:group-odd:justify-start xl:h-[580px] xl:p-4">
+              <h2 class="uppercase text-lg font-medium xl:text-2xl 2xl:text-3xl">
+                {projet.name}
+              </h2>
+            </div>
+          </div>
+          <div class="w-full space-y-8 flex flex-col mt-10 xl:h-1/2 xl:justify-center xl:gap-40 xl:w-1/2 xl:mt-0">
+            <p class="">{projet.description}</p>
+            <Button
+              text="Visiter le site"
+              url={projet.link}
+              additionalClass="self-end xl:self-center"
+            />
           </div>
         </div>
-        <div class="w-full space-y-8 flex flex-col mt-10">
-          <p>{projet.description}</p>
-          <Button
-            text="Visiter le site"
-            url={projet.link}
-            additionalClass="self-end"
-          />
-        </div>
-        <Separator additionalClass="mt-10" />
+
+        <Separator additionalClass="mt-10 xl:hidden" />
       </div>
     ))
   }
