Test unité dvh sur bloc intro

--- a/src/components/common/Introduction.astro
+++ b/src/components/common/Introduction.astro
@@ -8,7 +8,7 @@ const { title, description, image } = Astro.props;
 
 <section class="lg:flex lg:flex-row lg:flex-nowrap lg:h-screen">
   <div
-    class="bg-firefly-900 h-[30vh] flex justify-start items-end lg:h-full lg:w-1/4 lg:items-start lg:justify-end"
+    class="bg-firefly-900 h-[30dvh] flex justify-start items-end lg:h-full lg:w-1/4 lg:items-start lg:justify-end"
   >
     <!-- TAILLE DU TITRE A ADAPTER APRÈS TYPO DEFINITIVE -->
     <!-- Ajouter une ombre ? -->
@@ -23,7 +23,7 @@ const { title, description, image } = Astro.props;
     class="lg:w-3/4 lg:h-full lg:flex lg:flex-row lg:p-3 lg:space-x-10 lg:pt-20 xl:p-10 xl:pt-28 xl:space-x-16 2xl:space-x-32 2xl:pt-36 2xl:p-14"
   >
     <div
-      class="h-[70vh] flex flex-col items-end px-3 py-10 justify-between lg:h-full lg:flex-row lg:w-1/3 lg:p-0 xl:w-2/5"
+      class="h-[70dvh] flex flex-col items-end px-3 py-10 justify-between lg:h-full lg:flex-row lg:w-1/3 lg:p-0 xl:w-2/5"
     >
       <!-- À CHANGER -->
       <img
