--- a/src/components/projects/Listing.astro
+++ b/src/components/projects/Listing.astro
@@ -5,36 +5,30 @@ import Button from "../common/Button.astro";
 ---
 
 <section
-  class="projects-listing bg-firefly-500 flex flex-col items-center py-14 space-y-14 px-8 xl:space-y-28 xl:px-14 2xl:px-36"
+	class="projects-listing flex flex-col items-center space-y-14 bg-firefly-700 bg-texture px-8 py-14 xl:space-y-28 xl:px-14 2xl:px-36"
 >
-  {
-    data.map((projet) => (
-      <div class="group project text-fantasy-50 xl:h-screen">
-        <div class="xl:flex xl:flex-row-reverse xl:group-even:flex-row xl:gap-20 xl:h-full xl:items-center">
-          <div class="relative w-[300px] h-[365px] mx-auto xs:h-[430px] xs:w-[340px] sm:h-[470px] sm:w-96 md:w-[600px] xl:group-odd:flex xl:group-odd:justify-end xl:w-1/2 xl:h-[650px]">
-            <img
-              class="h-80 relative z-20 w-[85%] object-cover object-center xs:h-96 sm:h-[420px] xl:h-[580px]"
-              src={projet.image.src}
-              alt={projet.image.alt}
-            />
-            <div class="absolute bottom-0 p-3 h-80 w-[85%] flex justify-end items-end right-0 z-10 bg-transparent border-[1px] border-firefly-900 xs:h-96 sm:h-[420px] xl:group-odd:left-0 xl:group-odd:justify-start xl:h-[580px] xl:p-4">
-              <h2 class="uppercase text-lg font-medium xl:text-2xl 2xl:text-3xl">
-                {projet.name}
-              </h2>
-            </div>
-          </div>
-          <div class="w-full space-y-8 flex flex-col mt-10 xl:h-1/2 xl:justify-center xl:gap-40 xl:w-1/2 xl:mt-0">
-            <p class="">{projet.description}</p>
-            <Button
-              text="Visiter le site"
-              url={projet.link}
-              additionalClass="self-end xl:self-center"
-            />
-          </div>
-        </div>
+	{
+		data.map((projet) => (
+			<div class="project group text-fantasy-50 xl:h-screen">
+				<div class="xl:flex xl:h-full xl:flex-row-reverse xl:items-center xl:gap-20 xl:group-even:flex-row">
+					<div class="relative mx-auto h-[365px] w-[300px] xs:h-[430px] xs:w-[340px] sm:h-[470px] sm:w-96 md:w-[600px] xl:h-[650px] xl:w-1/2 xl:group-odd:flex xl:group-odd:justify-end">
+						<img
+							class="relative z-20 h-80 w-[85%] object-cover object-center xs:h-96 sm:h-[420px] xl:h-[580px]"
+							src={projet.image.src}
+							alt={projet.image.alt}
+						/>
+						<div class="absolute bottom-0 right-0 z-10 flex h-80 w-[85%] items-end justify-end border-[1px] border-firefly-900 bg-firefly-500 bg-transparent p-3 xs:h-96 sm:h-[420px] xl:h-[580px] xl:p-4 xl:group-odd:left-0 xl:group-odd:justify-start">
+							<h2 class="font-primary text-lg font-medium xl:text-2xl 2xl:text-3xl">{projet.name}</h2>
+						</div>
+					</div>
+					<div class="mt-10 flex w-full flex-col space-y-8 xl:mt-0 xl:h-1/2 xl:w-1/2 xl:justify-center xl:gap-40">
+						<p class="">{projet.description}</p>
+						<Button text="Visiter le site" url={projet.link} additionalClass="self-end xl:self-center" />
+					</div>
+				</div>
 
-        <Separator additionalClass="mt-10 xl:hidden" />
-      </div>
-    ))
-  }
+				<Separator additionalClass="mt-10 xl:hidden" />
+			</div>
+		))
+	}
 </section>
