--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,25 +1,20 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Maillage from "../components/homepage/Maillage.astro";
 
 const title = "Mélanie Casu - portfolio";
 ---
 
 <Layout title={title} menuText="accueil">
-  <main class="h-[120vh]">
-    <h1
-      class="w-fit ml-7 title text-center text-firefly-900 z-10"
-      data-menu-text="homepage"
-    >
-      home<span class="text-firefly-500">page</span>.
-    </h1>
-    <p class="font-light mt-20 text-firefly-900">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin aliquam
-      nulla vitae ullamcorper pretium. Integer mauris sem, scelerisque non
-      tempus nec, consequat vitae lectus. Nullam purus libero, efficitur eget
-      odio in, mollis laoreet nisl. In gravida finibus augue, at hendrerit erat
-      eleifend mollis. In at congue felis. Suspendisse iaculis posuere pulvinar.
-      Quisque quis justo id quam cursus dictum. Donec vitae magna sed mauris
-      dictum aliquet nec ut nibh.
-    </p>
-  </main>
+	<main class="h-screen">
+		<h1 class="title z-10 ml-7 w-fit text-center text-firefly-900" data-menu-text="homepage">Homepage.</h1>
+		<p class="mt-20 font-light text-firefly-900">
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin aliquam nulla vitae ullamcorper pretium. Integer mauris sem,
+			scelerisque non tempus nec, consequat vitae lectus. Nullam purus libero, efficitur eget odio in, mollis laoreet nisl. In gravida
+			finibus augue, at hendrerit erat eleifend mollis. In at congue felis. Suspendisse iaculis posuere pulvinar. Quisque quis justo
+			id quam cursus dictum. Donec vitae magna sed mauris dictum aliquet nec ut nibh.
+		</p>
+	</main>
+
+	<Maillage />
 </Layout>
