--- a/src/components/common/Button.astro
+++ b/src/components/common/Button.astro
@@ -1,20 +1,17 @@
 ---
 interface Props {
-  url: string;
-  text: string;
-  additionalClass?: string;
+	url: string;
+	text: string;
+	additionalClass?: string;
 }
 
 const { url = "#", text = "Découvrir", additionalClass } = Astro.props;
 ---
 
 <div
-  class=`btn group cursor-pointer bg-transparent block w-fit h-fit px-2 py-2 lg:hover:before:left-1 lg:hover:before:bottom-1 lg:hover:after:top-1 lg:hover:after:right-1 lg:hover:before:border-fantasy-50 lg:hover:after:border-fantasy-50 relative ${additionalClass}`
+	class=`btn cursor-pointer bg-transparent block w-fit h-fit px-2 py-2 lg:hover:before:left-1 lg:hover:before:bottom-1 lg:hover:after:top-1 lg:hover:after:right-1 lg:hover:before:border-fantasy-50 lg:hover:after:border-fantasy-50 relative ${additionalClass}`
 >
-  <a
-    class="lg:group-hover:text-fantasy-50 transition-colors relative uppercase lg:text-firefly-900 font-medium z-20 px-1"
-    href={url}>{text}</a
-  >
+	<a class="relative z-20 px-1 font-primary font-medium uppercase transition-colors lg:text-firefly-900" href={url}>{text}</a>
 </div>
 
 <style lang="postcss" is:global>
@@ -36,6 +33,9 @@ const { url = "#", text = "Découvrir", additionalClass } = Astro.props;
         .btn::after {
             transition: right 0.5s, top 0.5s, color 0.5s
         }
-    }
 
+        .btn:hover a {
+          @apply text-fantasy-50
+        }
+    }
 </style>
