--- a/src/components/common/Introduction.astro
+++ b/src/components/common/Introduction.astro
@@ -6,40 +6,26 @@
 const { title, description, image } = Astro.props;
 ---
 
-<section class="lg:flex lg:flex-row lg:flex-nowrap lg:h-screen">
-  <div
-    class="bg-firefly-900 h-[30dvh] flex justify-start items-end lg:h-full lg:w-1/4 lg:items-start lg:justify-end"
-  >
-    <!-- TAILLE DU TITRE A ADAPTER APRÈS TYPO DEFINITIVE -->
-    <!-- Ajouter une ombre ? -->
-    <h1
-      class="w-fit title text-8xl text-firefly-500 z-10 relative lg:text-9xl lg:mt-24 lg:translate-x-1/3"
-      data-menu-text="projets"
-    >
-      {title}<span class="text-firefly-500">.</span>
-    </h1>
-  </div>
-  <div
-    class="lg:w-3/4 lg:h-full lg:flex lg:flex-row lg:p-3 lg:space-x-10 lg:pt-20 xl:p-10 xl:pt-28 xl:space-x-16 2xl:space-x-32 2xl:pt-36 2xl:p-14"
-  >
-    <div
-      class="h-[70dvh] flex flex-col items-end px-3 py-10 justify-between lg:h-full lg:flex-row lg:w-1/3 lg:p-0 xl:w-2/5"
-    >
-      <!-- À CHANGER -->
-      <img
-        class="w-3/5 h-[90%] object-cover object-center lg:h-[50vh] lg:w-full xl:h-[60vh]"
-        src="/projets/test.webp"
-        alt="lorem"
-      />
-      <div
-        class="w-3/4 mt-6 h-[1px] bg-firefly-500 self-center lg:h-40 lg:w-[1px] lg:hidden"
-      >
-      </div>
-    </div>
-    <div class="p-3 pb-10 lg:w-2/3 lg:p-0 xl:w-3/5">
-      <p class="intro-description relative text-firefly-900">{description}</p>
-    </div>
-  </div>
+<section class="lg:flex lg:h-screen lg:flex-row lg:flex-nowrap">
+	<div class="flex h-[30dvh] items-end justify-start bg-firefly-900 lg:h-full lg:w-1/4 lg:items-start lg:justify-end">
+		<!-- TAILLE DU TITRE A ADAPTER APRÈS TYPO DEFINITIVE -->
+		<!-- Ajouter une ombre ? -->
+		<h1 class="title relative z-10 w-fit text-firefly-500 lg:mt-24 lg:translate-x-1/3" data-menu-text="projets">
+			{title}.
+		</h1>
+	</div>
+	<div
+		class="lg:flex lg:h-full lg:w-3/4 lg:flex-row lg:space-x-10 lg:p-3 lg:pt-20 xl:space-x-16 xl:p-10 xl:pt-28 2xl:space-x-32 2xl:p-14 2xl:pt-36"
+	>
+		<div class="flex h-[70dvh] flex-col items-end justify-between px-3 py-10 lg:h-full lg:w-1/3 lg:flex-row lg:p-0 xl:w-2/5">
+			<!-- À CHANGER -->
+			<img class="h-[90%] w-3/5 object-cover object-center lg:h-[50vh] lg:w-full xl:h-[60vh]" src="/projets/test.webp" alt="lorem" />
+			<div class="mt-6 h-[1px] w-3/4 self-center bg-firefly-500 lg:hidden lg:h-40 lg:w-[1px]"></div>
+		</div>
+		<div class="p-3 pb-10 lg:w-2/3 lg:p-0 xl:w-3/5">
+			<p class="intro-description relative text-firefly-900">{description}</p>
+		</div>
+	</div>
 </section>
 <style lang="postcss">
   @media screen and (min-width: 1024px) {
