--- a/src/components/common/Menu.astro
+++ b/src/components/common/Menu.astro
@@ -1,80 +1,70 @@
 ---
 const { title } = Astro.props;
 const links = [
-  {
-    text: "accueil",
-    url: "/",
-  },
-  {
-    text: "projets",
-    url: "/projets",
-  },
-  {
-    text: "à propos",
-    url: "/a-propos",
-  },
-  {
-    text: "contact",
-    url: "/#contact",
-  },
+	{
+		text: "accueil",
+		url: "/"
+	},
+	{
+		text: "projets",
+		url: "/projets"
+	},
+	{
+		text: "à propos",
+		url: "/a-propos"
+	},
+	{
+		text: "contact",
+		url: "/#contact"
+	}
 ];
 ---
 
 <>
-  <div
-    class="modal-menu z-50 pr-2 pt-2 pl-6 pb-24 flex flex-col justify-between items-start lg:flex-col-reverse lg:pb-5 lg:pt-48 lg:pr-5 lg:pl-12 fixed top-0 right-0 bottom-0 w-full h-dvh lg:rounded-3xl lg:top-6 lg:right-6 lg:bottom-6 lg:w-1/2 2xl:w-1/3 bg-firefly-500"
-  >
-    <div
-      class="close-modal self-end group lg:cursor-pointer w-24 h-11 flex justify-center items-center rounded-full bg-fantasy-50 lg:h-[75px] lg:w-[75px] lg:hover:bg-firefly-900 lg:transition-colors"
-    >
-      <span class="text-firefly-900 text-xl lg:group-hover:text-fantasy-50"
-        >fermer</span
-      >
-    </div>
-    <ul class="space-y-3 lg:space-y-6">
-      {
-        links.map((link) => (
-          <li>
-            <a
-              class="link w-fit hover:text-firefly-900 text-3xl transition-colors text-fantasy-50 leading-normal uppercase lg:text-6xl"
-              href={link.url}
-            >
-              {link.text}
-            </a>
-          </li>
-        ))
-      }
-    </ul>
-  </div>
-  <div
-    class="fixed-animated-menu w-full px-3 py-2 lg:p-0 flex justify-end z-40 fixed lg:bottom-5 lg:right-5 lg:w-fit lg:h-fit"
-  >
-    <div
-      class="circle lg:cursor-pointer w-24 h-11 flex justify-center items-center lg:absolute lg:bottom-1/2 lg:right-1/2 z-40 lg:translate-x-1/2 lg:translate-y-1/2 rounded-full bg-firefly-900 lg:h-[75px] lg:w-[75px] lg:hover:bg-firefly-500 lg:transition-colors"
-    >
-      <span class="text-fantasy-50 text-xl">menu</span>
-    </div>
-    <svg class="hidden lg:block" viewBox="0 0 100 100" width="125" height="125">
-      <defs>
-        <path
-          id="circle"
-          d="
+	<div
+		class="modal-menu fixed bottom-0 right-0 top-0 z-50 flex h-dvh w-full flex-col items-start justify-between bg-firefly-500 pb-24 pl-6 pr-2 pt-2 lg:bottom-6 lg:right-6 lg:top-6 lg:w-1/2 lg:flex-col-reverse lg:rounded-3xl lg:pb-5 lg:pl-12 lg:pr-5 lg:pt-48 2xl:w-1/3"
+	>
+		<div
+			class="close-modal group flex h-11 w-24 items-center justify-center self-end rounded-full bg-fantasy-50 lg:h-[75px] lg:w-[75px] lg:cursor-pointer lg:transition-colors lg:hover:bg-firefly-900"
+		>
+			<span class="text-xl text-firefly-900 lg:group-hover:text-fantasy-50">fermer</span>
+		</div>
+		<ul class="space-y-3 lg:space-y-6">
+			{
+				links.map((link) => (
+					<li>
+						<a
+							class="link w-fit text-3xl uppercase leading-normal text-fantasy-50 transition-colors hover:text-firefly-900 lg:text-6xl"
+							href={link.url}
+						>
+							{link.text}
+						</a>
+					</li>
+				))
+			}
+		</ul>
+	</div>
+	<div class="fixed-animated-menu fixed z-40 flex w-full justify-end px-3 py-2 lg:bottom-5 lg:right-5 lg:h-fit lg:w-fit lg:p-0">
+		<div
+			class="circle z-40 flex h-11 w-24 items-center justify-center rounded-full bg-firefly-900 lg:absolute lg:bottom-1/2 lg:right-1/2 lg:h-[75px] lg:w-[75px] lg:translate-x-1/2 lg:translate-y-1/2 lg:cursor-pointer lg:transition-colors lg:hover:bg-firefly-500"
+		>
+			<span class="text-xl text-fantasy-50">menu</span>
+		</div>
+		<svg class="hidden lg:block" viewBox="0 0 100 100" width="125" height="125">
+			<defs>
+				<path id="circle" d="
         M 50, 50
         m -37, 0
         a 37,37 0 1,1 74,0
-        a 37,37 0 1,1 -74,0"
-        ></path>
-      </defs>
-      <text>
-        <textPath
-          class="text-firefly-900 lg:cursor-default"
-          xlink:href="#circle"
-        >
-          {title}
-        </textPath>
-      </text>
-    </svg>
-  </div>
+        a 37,37 0 1,1 -74,0"></path>
+			</defs>
+			<text>
+				<textPath class="text-firefly-900 lg:cursor-default" xlink:href="#circle">
+					{title}
+				</textPath>
+			</text>
+		</svg>
+	</div>
 </>
 
 <style is:global lang="postcss">
@@ -127,14 +117,14 @@ const links = [
 </style>
 
 <script>
-  const btnMenu = document.querySelector(".fixed-animated-menu .circle");
-  const modal = document.querySelector(".modal-menu");
-  const btnClose = document.querySelector(".close-modal");
-  btnMenu.addEventListener("click", () => {
-    modal.classList.add("active");
-  });
+	const btnMenu = document.querySelector(".fixed-animated-menu .circle");
+	const modal = document.querySelector(".modal-menu");
+	const btnClose = document.querySelector(".close-modal");
+	btnMenu.addEventListener("click", () => {
+		modal.classList.add("active");
+	});
 
-  btnClose.addEventListener("click", () => {
-    modal.classList.remove("active");
-  });
+	btnClose.addEventListener("click", () => {
+		modal.classList.remove("active");
+	});
 </script>
