--- a/src/components/common/Separator.astro
+++ b/src/components/common/Separator.astro
@@ -1,13 +1,11 @@
 ---
 interface Props {
-  additionalClass?: string;
+	additionalClass?: string;
 }
 
 const { additionalClass } = Astro.props;
 ---
 
-<div
-  class=`w-full flex justify-center items-center overflow-visible h-[1px] bg-firefly-900 ${additionalClass}`
->
-  <div class="h-3 w-3 rounded-full bg-firefly-900"></div>
+<div class=`w-full flex justify-center items-center overflow-visible h-[1px] bg-firefly-900 ${additionalClass}`>
+	<div class="h-3 w-3 rounded-full bg-firefly-900"></div>
 </div>
