--- a/src/components/common/Button.astro
+++ b/src/components/common/Button.astro
@@ -8,34 +8,20 @@ interface Props {
 const { url = "#", text = "Découvrir", additionalClass } = Astro.props;
 ---
 
-<div
-	class=`btn cursor-pointer bg-transparent block w-fit h-fit px-2 py-2 lg:hover:before:left-1 lg:hover:before:bottom-1 lg:hover:after:top-1 lg:hover:after:right-1 lg:hover:before:border-fantasy-50 lg:hover:after:border-fantasy-50 relative ${additionalClass}`
->
-	<a class="relative z-20 px-1 font-primary font-medium uppercase transition-colors lg:text-firefly-900" href={url}>{text}</a>
+<div class=`btn cursor-pointer bg-transparent block w-fit h-fit px-2 py-2 lg:hover:before:w-full relative ${additionalClass}`>
+	<a class="relative z-20 px-1 font-primary font-medium uppercase transition-colors lg:text-fantasy-50" href={url}>{text}</a>
 </div>
 
 <style lang="postcss" is:global>
     .btn::before {
         content: "";
-        @apply absolute bottom-0 left-0 w-3 h-3 border-b-[1px] border-l-[1px] rounded-bl-sm border-firefly-900;
-    }
-    .btn::after {
-        content: "";
-        @apply absolute top-0 right-0 w-3 h-3 border-t-[1px] border-r-[1px] rounded-tr-sm border-firefly-900;
+        @apply absolute bottom-1 left-1 w-1/3 h-2 border-b-[1px] border-l-[1px] rounded-bl-sm border-fantasy-50;
     }
 
 /* ANIMATION AU HOVER SUR LE BOUTON */
     @media screen and (min-width: 1024px) {
         .btn::before {
-            transition: left 0.5s, bottom 0.5s, color 0.5s
-        }
-
-        .btn::after {
-            transition: right 0.5s, top 0.5s, color 0.5s
-        }
-
-        .btn:hover a {
-          @apply text-fantasy-50
+            transition: width 0.5s;
         }
     }
 </style>
