--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,7 +20,7 @@ const { title, menuText } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body class="relative">
-		<Menu title={menuText} />
+		<Menu />
 		<slot />
 	</body>
 </html>
