--- a/src/components/common/Menu.astro
+++ b/src/components/common/Menu.astro
@@ -21,19 +21,19 @@ const links = [
 
 <>
 	<div
-		class="modal-menu fixed bottom-0 right-0 top-0 z-50 flex h-dvh w-full flex-col items-start justify-between bg-firefly-500 pb-24 pl-6 pr-2 pt-2 lg:bottom-6 lg:right-6 lg:top-6 lg:w-1/2 lg:flex-col-reverse lg:rounded-3xl lg:pb-5 lg:pl-12 lg:pr-5 lg:pt-48 2xl:w-1/3"
+		class="modal-menu fixed bottom-0 right-0 top-0 z-50 flex h-dvh w-full flex-col items-start justify-between bg-firefly-500 pb-6 pl-6 pr-2 pt-2 lg:bottom-6 lg:right-6 lg:top-6 lg:w-1/2 lg:flex-col-reverse lg:rounded-3xl lg:px-5 lg:pb-5 lg:pt-12 xl:w-2/5 2xl:w-1/3"
 	>
 		<div
-			class="close-modal group flex h-11 w-24 items-center justify-center self-end rounded-full bg-fantasy-50 lg:h-[75px] lg:w-[75px] lg:cursor-pointer lg:transition-colors lg:hover:bg-firefly-900"
+			class="close-modal group flex h-11 w-24 items-center justify-center self-end rounded-full bg-fantasy-50 lg:h-[75px] lg:min-h-[75px] lg:w-[75px] lg:cursor-pointer lg:transition-colors lg:hover:bg-firefly-900"
 		>
 			<span class="text-xl text-firefly-900 lg:group-hover:text-fantasy-50">fermer</span>
 		</div>
-		<ul class="space-y-3 lg:space-y-6">
+		<ul class="mt-20 space-y-3 lg:space-y-6 lg:pl-7">
 			{
 				links.map((link) => (
 					<li>
 						<a
-							class="link w-fit text-3xl uppercase leading-normal text-fantasy-50 transition-colors hover:text-firefly-900 lg:text-6xl"
+							class="link w-fit text-4xl uppercase leading-normal text-fantasy-50 transition-colors hover:text-firefly-900 lg:text-6xl"
 							href={link.url}
 						>
 							{link.text}
@@ -42,6 +42,7 @@ const links = [
 				))
 			}
 		</ul>
+		<img class="mx-auto w-40 md:w-48" src="/logos/logo-white_green.svg" alt="Logo Mélanie Casu" />
 	</div>
 	<div class="fixed-menu fixed z-40 flex w-full justify-end px-3 py-2 lg:bottom-7 lg:right-7 lg:h-fit lg:w-fit lg:p-0">
 		<div
