--- a/src/components/homepage/Maillage.astro
+++ b/src/components/homepage/Maillage.astro
@@ -2,12 +2,15 @@
 
 ---
 
+<!-- TODO : GERER LES CARDS CLIQUABLES AU DEBUT DE L'ANIMATION -->
 <section class="maillage flex h-screen flex-col justify-between overflow-hidden bg-firefly-900 lg:flex-row lg:flex-nowrap">
-	<div class="maillage-border pointer-events-none h-1/5 w-1/4 border-b-2 border-fantasy-50 lg:h-0 lg:w-1/12 lg:border-b-0 lg:border-r-2">
+	<div
+		class="maillage-border pointer-events-none h-[15%] w-1/4 border-b-2 border-fantasy-50 lg:h-0 lg:w-1/12 lg:border-b-0 lg:border-r-2"
+	>
 	</div>
-	<div class="relative flex h-3/5 w-full items-center justify-center lg:h-full lg:w-10/12">
+	<div class="relative flex h-[70%] w-full items-center justify-center lg:h-full lg:w-10/12">
 		<div class="maillage-text">
-			<div class="split-text pointer-events-none text-fantasy-50">
+			<div class="split-text pointer-events-none flex flex-row flex-nowrap text-fantasy-50">
 				<span class="char">d</span>
 				<span class="char">é</span>
 				<span class="char">c</span>
@@ -19,44 +22,57 @@
 				<span class="char">r</span>
 			</div>
 			<div class="overflow-hidden text-center">
-				<span class="subtitle inline-block translate-y-full font-primary text-2xl text-fantasy-50 lg:text-3xl 2xl:text-5xl">
+				<span
+					class="subtitle inline-block translate-y-full font-primary text-2xl text-fantasy-50 md:text-4xl xl:text-5xl 2xl:text-6xl"
+				>
 					découvrir
 				</span>
 			</div>
 		</div>
-		<!-- FINIR LE PLACEMENT + ANIMATION DES CARDS LINK -->
 		<div
-			class="maillage-link absolute bottom-0 left-3 h-28 w-1/3 bg-firefly-900 opacity-0 lg:left-0 lg:top-10 lg:h-40 lg:w-96 lg:translate-x-10 2xl:h-48 2xl:w-[404px]"
+			class="maillage-link absolute bottom-3 left-5 h-20 w-2/5 max-w-52 bg-firefly-900 opacity-0 sm:left-10 sm:h-28 sm:w-1/3 md:h-32 md:max-w-none lg:left-0 lg:top-10 lg:h-40 lg:w-96 lg:translate-x-10 2xl:h-48 2xl:w-[404px]"
 		>
+			<div
+				class="pointer-events-none absolute left-1/2 top-2 h-2 w-2 -translate-x-1/2 rounded-full bg-firefly-900 lg:top-3 lg:h-3 lg:w-3"
+			>
+			</div>
 			<a
 				href="/a-propos"
-				class="flex h-full w-full items-center justify-center bg-fantasy-50/70 bg-texture bg-top text-center font-primary lg:text-3xl 2xl:text-4xl"
+				class="flex h-full w-full items-center justify-center bg-fantasy-50/70 bg-texture bg-top text-center font-primary md:text-2xl lg:text-3xl 2xl:text-4xl"
 			>
 				un peu plus <br /> sur moi
 			</a>
 		</div>
 		<div
-			class="maillage-link absolute bottom-0 right-5 h-28 w-1/3 bg-firefly-900 opacity-0 lg:bottom-10 lg:right-0 lg:h-40 lg:w-96 lg:-translate-x-20 2xl:bottom-16 2xl:h-48 2xl:w-[404px]"
+			class="maillage-link absolute bottom-3 right-5 h-20 w-2/5 max-w-52 bg-firefly-900 opacity-0 sm:right-10 sm:h-28 sm:w-1/3 md:h-32 md:max-w-none lg:bottom-10 lg:right-0 lg:h-40 lg:w-96 lg:-translate-x-20 2xl:bottom-16 2xl:h-48 2xl:w-[404px]"
 		>
+			<div
+				class="pointer-events-none absolute left-1/2 top-2 h-2 w-2 -translate-x-1/2 rounded-full bg-firefly-900 lg:top-3 lg:h-3 lg:w-3"
+			>
+			</div>
+
 			<a
 				href="/projets"
-				class="flex h-full w-full items-center justify-center bg-fantasy-50/70 bg-texture bg-bottom text-center font-primary lg:text-3xl 2xl:text-4xl"
+				class="flex h-full w-full items-center justify-center bg-fantasy-50/70 bg-texture bg-bottom text-center font-primary md:text-2xl lg:text-3xl 2xl:text-4xl"
 			>
 				quelques <br />projets
 			</a>
 		</div>
 	</div>
 	<div
-		class="maillage-border pointer-events-none h-1/5 w-1/4 self-end border-t-2 border-fantasy-50 lg:h-0 lg:w-1/12 lg:border-l-2 lg:border-t-0"
+		class="maillage-border pointer-events-none h-[15%] w-1/4 self-end border-t-2 border-fantasy-50 lg:h-0 lg:w-1/12 lg:border-l-2 lg:border-t-0"
 	>
 	</div>
 </section>
 
-<style lang="postcss">
+<style is:global lang="postcss">
 .split-text span {
-    @apply font-primary opacity-75 text-7xl lg:text-[180px] xl:text-[200px] 2xl:text-[250px];
-    display: inline-block;
+	@apply inline-block font-primary opacity-75 text-7xl text-[150px] md:text-[250px] lg:text-[300px] xl:text-[350px] 2xl:text-[400px];
+	transform-origin: 50% 50%;
 }
+
+	.maillage-link {
+		clip-path: polygon(10% 0, 90% 0, 100% 20%, 100% 80%, 90% 100%, 10% 100%, 0 80%, 0 20%);	}
 </style>
 
 <script>
@@ -68,32 +84,18 @@
 
 	/* FONCTION DE PLACEMENT ALÉATOIRE DES LETTRES */
 	function positionCharsRandomly() {
-		const parent = document.querySelector(".maillage");
-
-		// Dimensions du conteneur parent
-		const parentRect = parent.getBoundingClientRect();
-		const parentWidth = parentRect.width;
-		const parentHeight = parentRect.height;
-
-		// Vérification de la largeur de l'écran
-		const isMobileVersion = window.innerWidth <= 1023;
-
-		// Définir une plage pour limiter l'éparpillement (en pourcentage du conteneur)
-		const xRange = isMobileVersion ? parentWidth * 0.6 : parentWidth * 0.4; // 40% de la largeur du conteneur
-		const yRange = isMobileVersion ? parentHeight * 0.6 : parentHeight * 0.4; // 40% de la hauteur du conteneur
+		// const isMobileVersion = window.innerWidth <= 1023;
 
 		splitText.forEach((char) => {
-			// Générer des positions aléatoires
-			const randomX = Math.random() * xRange - xRange / 2; // Décalage horizontal aléatoire
-			const randomY = Math.random() * yRange - yRange / 2; // Décalage vertical aléatoire
-
-			// Générer des rotations aléatoires (entre -250° et 250°)
-			const randomRotationY = Math.random() * 500 - 250;
+			// Générer des positions / rotations aléatoires
+			const randomY = Math.random() * 600 - 300; // entre -300px et 300px
+			const randomZ = Math.random() * 50 - 50 / 2; // Décalage en profondeur
+			const randomRotationY = Math.random() * 1000 - 500; // entre -500° et 500°
 
 			// Appliquer les transformations initiales via GSAP
 			gsap.set(char, {
-				x: randomX,
 				y: randomY,
+				z: randomZ,
 				rotationY: randomRotationY
 			});
 		});
@@ -109,7 +111,7 @@
 				trigger: ".maillage",
 				start: "top top",
 				pin: true,
-				markers: true,
+				markers: false,
 				scrub: true,
 				end: "+=2000"
 			}
@@ -119,11 +121,15 @@
 		tl.to(
 			splitText,
 			{
-				x: 0,
 				y: 0,
+				z: 0,
+				fontSize: "20vw",
 				rotationY: 0,
-				duration: 1.4,
-				stagger: 0.05
+				duration: 1.2,
+				stagger: {
+					from: "random",
+					ease: "power2.in"
+				}
 			},
 			"<"
 		);
@@ -140,7 +146,7 @@
 				trigger: ".maillage",
 				start: "top top",
 				pin: true,
-				markers: true,
+				markers: false,
 				scrub: true,
 				end: "+=2000"
 			}
@@ -150,16 +156,20 @@
 		tl.to(
 			splitText,
 			{
-				x: 0,
 				y: 0,
+				z: 0,
+				fontSize: "15vw",
 				rotationY: 0,
 				duration: 1.2,
-				stagger: 0.05
+				stagger: {
+					from: "random",
+					ease: "power2.in"
+				}
 			},
 			"<"
 		);
+		tl.to(".maillage-text .subtitle", { translateY: "0", duration: "0.5" });
+		tl.to(".split-text", { opacity: 0.2, duration: "0.5" }, "<");
 		tl.to(".maillage-link", { opacity: 1 });
-		tl.to(".split-text", { opacity: 0.2 }, "<");
-		tl.to(".maillage-text .subtitle", { translateY: "0" }, "<");
 	});
 </script>
