Transition de page : test ajout après début d'intégration

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ const title = "Mélanie Casu - portfolio";
 ---
 
 <Layout title={title} menuText="accueil">
-	<main class="h-screen">
+	<main class="h-screen bg-fantasy-50 opacity-0">
 		<h1 class="title z-10 ml-7 w-fit text-center text-firefly-900" data-menu-text="homepage">Homepage.</h1>
 		<p class="mt-20 font-light text-firefly-900">
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin aliquam nulla vitae ullamcorper pretium. Integer mauris sem,
@@ -17,4 +17,8 @@ const title = "Mélanie Casu - portfolio";
 	</main>
 
 	<Maillage />
+	<div class="flex h-screen flex-col items-center justify-center bg-fantasy-50">
+		<p>CONTACT</p>
+		<p>linkedin / mailto / github</p>
+	</div>
 </Layout>
