--- a/src/pages/projets.astro
+++ b/src/pages/projets.astro
@@ -6,15 +6,17 @@ import listingProjects from "../../src/datas/projects.json";
 ---
 
 <Layout title="Projets" menuText="projets">
-	<Introduction
-		title="projets"
-		description=`Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin aliquam
+	<main class="opacity-0">
+		<Introduction
+			title="projets"
+			description=`Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin aliquam
       nulla vitae ullamcorper pretium. Integer mauris sem, scelerisque non
       tempus nec, consequat vitae lectus. Nullam purus libero, efficitur eget
       odio in, mollis laoreet nisl. In gravida finibus augue, at hendrerit erat
       eleifend mollis.`
-		`
-	/>
+			`
+		/>
 
-	<Listing data={listingProjects} />
+		<Listing data={listingProjects} />
+	</main>
 </Layout>
