--- a/src/components/common/Menu.astro
+++ b/src/components/common/Menu.astro
@@ -42,7 +42,7 @@ const links = [
 				))
 			}
 		</ul>
-		<img class="mx-auto w-40 md:w-48" src="/logos/logo-white_green.svg" alt="Logo Mélanie Casu" />
+		<img class="mx-auto w-40 md:w-48" src="/logos/logo-beige_darkgreen.svg" alt="Logo Mélanie Casu" />
 	</div>
 	<div class="fixed-menu fixed z-40 flex w-full justify-end px-3 py-2 lg:bottom-7 lg:right-7 lg:h-fit lg:w-fit lg:p-0">
 		<div
